--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -4,7 +4,7 @@ imports:
 
 framework:
     #esi:             ~
-    #translator:      { fallback: "%locale%" }
+    translator:      { fallback: "%locale%" }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -176,14 +176,12 @@ ivory_ck_editor:
             allowedContent: 'p h2 h3 h4 img{text-align,margin-left}(*); a[!href,target]{*}(*); table th tr td strong em; ol ul li span(*){font-size,font-family,color,background-color}; img[*]{*}; iframe{*}[*];'
             disableNativeSpellChecker: false
             height: 300
-            stylesSet: 'default_styles:../../bundles/englishhome/js/ckeditor_styles.js'
         editor_simple:
             toolbar: "toolbar_simple"
             removePlugins: "elementspath,contextmenu,liststyle,tabletools"
             allowedContent: 'p h2 h3 h4 img{text-align,margin-left}(*); a[!href,target]{*}(*); table th tr td strong em; ol ul li span(*); img[*]{*}; iframe{*}[*];'
             disableNativeSpellChecker: false
             height: 150
-            stylesSet: 'default_styles:../../bundles/englishhome/js/ckeditor_styles.js'
         editor_page:
             startupFocus: true
             toolbar: "toolbar_page"
@@ -191,7 +189,6 @@ ivory_ck_editor:
             allowedContent: 'p h2 h3 h4 img{text-align,margin-left}(*); a[href,target,name]{*}(*); table th tr td strong em; ol ul li span(*){font-size,font-family,color,background-color}; img[*]{*}; iframe{*}[*];'
             disableNativeSpellChecker: false
             height: 500
-            stylesSet: 'default_styles:../../bundles/englishhome/js/ckeditor_styles.js'
     toolbars:
         configs:
             toolbar_default: [ ['Styles','Bold','Italic','Underline','Strike','JustifyLeft','JustifyCenter','JustifyRight','TextColor','BGColor','FontSize'],['Link','Unlink','NumberedList','BulletedList','Outdent','Indent','Image','MediaEmbed'],[ 'PasteText', 'PasteFromWord', 'Undo', 'Redo','RemoveFormat'] ]
