--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -155,12 +155,10 @@ vich_uploader:
     storage: vich_uploader.storage.file_system
     mappings:
         property_file:
-            uri_prefix: %upload_path%   # uri prefix to resource
+            uri_prefix: %upload_path%    # uri prefix to resource
             upload_destination: %upload_path%   # gaufrette storage fs id, required
-            namer: vich_uploader.namer_origname # namer.upload_file  specify a file namer service id for this entity, null default
-            directory_namer: # specify a directory namer service id for this entity, null default
-            delete_on_remove: true # determines whether to delete file upon removal of entity
-            inject_on_load: true # determines whether to inject a File instance upon load
+            namer: vich_uploader.namer_uniqid # namer.upload_file  specify a file namer service id for this entity, null default
+
 
 knp_snappy:
     pdf:
