--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,6 +32,10 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/module/, role: ROLE_USER }
+        - { path: ^/file/, role: ROLE_USER }
+        - { path: ^/tag/, role: ROLE_USER }
+        - { path: ^/user/, role: ROLE_USER }
 
 
 
