--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+default:
+    pattern:  /
+    defaults: { _controller: AppBundle:Page:home }
+
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
