--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
         "symfony/assetic-bundle": "2.3.*",
         "symfony/swiftmailer-bundle": "2.3.*",
         "symfony/monolog-bundle": "2.3.*",
+        "symfony/serializer": "3.0.*@dev",
+        "jms/serializer-bundle": "0.13.*@dev",
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
