--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -129,6 +129,17 @@ fr3d_ldap:
     service:
         user_manager: fos_user.user_manager          # Overrides default user manager
 
+be_simple_sso_auth:
+    admin_sso:
+        protocol:
+            id: cas
+            version: 2
+        server:
+            id: cas
+            login_url: http://cas.server.tld/login
+            logout_url: http://cas.server.tld/logout
+            validation_url: http://cas.server.tld/serviceValidate
+
 # Doctrine extensions
 stof_doctrine_extensions:
     default_locale: en_US
