--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -136,9 +136,9 @@ be_simple_sso_auth:
             version: 2
         server:
             id: cas
-            login_url: http://cas.server.tld/login
-            logout_url: http://cas.server.tld/logout
-            validation_url: http://cas.server.tld/serviceValidate
+            login_url: https://cas.uga.edu/cas/login
+            logout_url: https://cas.uga.edu/cas/logout
+            validation_url: https://cas.uga.edu/cas/serviceValidate
 
 # Doctrine extensions
 stof_doctrine_extensions:
