--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,6 +2,12 @@ default:
     pattern:  /
     defaults: { _controller: AppBundle:Page:home }
 
+login:
+     pattern:   /login
+
+login_check:
+     pattern:   /login_check
+
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
