--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,16 +17,15 @@ security:
     firewalls:
         main:
             pattern: ^/
-            fr3d_ldap:  ~
             trusted_sso:
                 manager: admin_sso
-                login_action: BeSimpleSsoAuthBundle:TrustedSso:login
-                logout_action: BeSimpleSsoAuthBundle:TrustedSso:logout
+                login_action: false
+                logout_action: false
                 create_users: true
                 created_users_roles: [ROLE_USER, ROLE_ADMIN]
-            form_login:
-                csrf_provider: form.csrf_provider
-                default_target_path: /user/profile
+                login_path: /login
+                check_path: /login_check
+            provider: fos_userbundle
             logout:
                 path:   /logout
                 target: /login
@@ -35,9 +34,7 @@ security:
 
     access_control:
         #- { path: ^/_internal/secure, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login, role: ROLE_USER }
         - { path: ^/user/, role: ROLE_USER }
 
 
