--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,24 +17,21 @@ security:
     firewalls:
         main:
             pattern: ^/
-            trusted_sso:
-                manager: admin_sso
-                login_action: false
-                logout_action: false
-                create_users: true
-                created_users_roles: [ROLE_USER, ROLE_ADMIN]
-                login_path: /login
-                check_path: /login_check
-            provider: fos_userbundle
+            fr3d_ldap:  ~
+            form_login:
+                csrf_provider: form.csrf_provider
+                default_target_path: /theme
             logout:
                 path:   /logout
-                target: /login
+                target: /
             anonymous:    true
             switch_user: true
 
     access_control:
         #- { path: ^/_internal/secure, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
-        - { path: ^/login, role: ROLE_USER }
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY}
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/user/, role: ROLE_USER }
 
 
