--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,7 +32,14 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY}
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/user/, role: ROLE_USER }
+        - { path: edit$, role: ROLE_ADMIN }
+        - { path: new$, role: ROLE_ADMIN }
+        - { path: delete$, role: ROLE_ADMIN }
+        - { path: create$, role: ROLE_ADMIN }
+        - { path: update$, role: ROLE_ADMIN }
+        - { path: ^/tag/, role: ROLE_ADMIN }
+        - { path: ^/section/, role: ROLE_ADMIN }
+
 
 
 
