--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,7 +20,7 @@ security:
             fr3d_ldap:  ~
             form_login:
                 csrf_provider: form.csrf_provider
-                default_target_path: /theme
+                default_target_path: /user/profile
             logout:
                 path:   /logout
                 target: /
