--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -108,6 +108,18 @@ fos_user:
         user_manager:   fos_user.user_manager.default
 
 
+be_simple_sso_auth:
+    admin_sso:
+        protocol:
+            id: cas
+            version: 2
+        server:
+            id: cas
+            login_url: https://cas.dev.uga.edu/cas/login
+            logout_url: https://cas.dev.uga.edu/cas/logout
+            validation_url: https://cas.dev.uga.edu/cas/serviceValidate
+
+
 fr3d_ldap:
     driver:
         host:                %ldap_host%
