--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -83,7 +83,7 @@ doctrine:
 
     orm:
         auto_generate_proxy_classes: "%kernel.debug%"
-        auto_mapping: false
+        auto_mapping: true
 
 # Swiftmailer Configuration
 swiftmailer:
