--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -17,6 +17,9 @@ security:
     firewalls:
         main:
             pattern: ^/
+            logout:
+                path:   /logout
+                target: /
             trusted_sso:
                 manager: admin_sso
                 create_users: false
