--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -19,7 +19,7 @@ security:
             pattern: ^/
             fr3d_ldap:  ~
             form_login:
-                csrf_provider: security.csrf.token_manager
+                csrf_provider: form.csrf_provider
                 default_target_path: /user/profile
             logout:
                 path:   /logout
