--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,12 +1,28 @@
 # app/config/security.yml
 security:
+    firewalls:
+        main:
+            pattern: ^/
+            trusted_sso:
+                manager: admin_sso
+                create_users: true
+                created_users_roles: [ 'ROLE_USER' ]
+                login_action: false
+                logout_action: false
+                login_path: /login
+                check_path: /login
+                failure_path: /register
+            provider: fos_userbundle
+            anonymous:    true
+            switch_user: true
+            logout:
+              path:   /logout
+              target: /home
+
     providers:
         chain_provider:
             chain:
-                providers: [fos_userbundle, fr3d_ldapbundle]
-
-        fr3d_ldapbundle:
-            id: fr3d_ldap.security.user.provider
+                providers: [fos_userbundle]
 
         fos_userbundle:
             id: fos_user.user_provider.username
@@ -14,29 +30,14 @@ security:
     encoders:
         FOS\UserBundle\Model\UserInterface: sha512
 
-    firewalls:
-        main:
-            pattern: ^/
-            logout:
-                path:   /logout
-                target: /
-            trusted_sso:
-                manager: admin_sso
-                create_users: true
-                login_action: false
-                logout_action: false
-                login_path: /login
-                check_path: /login
-            provider: fos_userbundle
-            anonymous:    true
-            switch_user: true
-
     access_control:
 
         #- { path: ^/_internal/secure, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https  }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https  }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        - { path: ^/home, role: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        - { path: ^/logout$, role: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
         - { path: ^/user/[0-9]*/edit, role: ROLE_USER }
         - { path: edit$, role: ROLE_ADMIN }
         - { path: new$, role: ROLE_ADMIN }
