tweak for https

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,11 +8,13 @@ logout:
 default:
     path:  /
     defaults: { _controller: AppBundle:Page:home }
+    schemes:  [https]
 
 app:
     resource: "@AppBundle/Controller/"
     type:     annotation
     prefix:   /
+
 
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
