--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -94,6 +94,17 @@ swiftmailer:
     spool:     { type: memory }
 
 
+be_simple_sso_auth:
+    admin_sso:
+        protocol:
+            id: cas
+            version: 2
+        server:
+            id: cas
+            login_url: https://cas.uga.edu/cas/login
+            logout_url: https://cas.uga.edu/cas/logout
+            validation_url: https://cas.uga.edu/cas/serviceValidate
+
 fos_user:
     db_driver: orm
     firewall_name: main
@@ -106,28 +117,6 @@ fos_user:
         sender_name:    %app_name%
     service:
         user_manager:   fos_user.user_manager.default
-
-
-fr3d_ldap:
-    driver:
-        host:                %ldap_host%
-        port:                %ldap_port%
-#       username:             foo    # Optional
-#       password:             bar    # Optional
-        bindRequiresDn:       true   # Optional
-        baseDn:               ou=users,o=uga
-        accountFilterFormat: (&(cn=%s)) # Optional. sprintf format %s will be the username
-#       optReferrals:        false  # Optional
-        useSsl:              true   # Enable SSL negotiation. Optional
-#       useStartTls:         true   # Enable TLS negotiation. Optional
-    user:
-        baseDn: ou=users,o=uga
-        filter: (&(ObjectClass=Person))
-        attributes:          # Specify ldap attributes mapping [ldap attribute, user object method]
-           - { ldap_attr: cn,  user_method: setUsername }
-           - { ldap_attr: mail,   user_method: setEmail }
-    service:
-        user_manager: fos_user.user_manager          # Overrides default user manager
 
 
 # Doctrine extensions
