--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -27,5 +27,42 @@ monolog:
 assetic:
     use_controller: false
 
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: Sustain\UserBundle\Entity\User
+    registration:
+        confirmation:
+            enabled:    false
+    from_email:
+        address:        %from_email%
+        sender_name:    %app_name%
+    service:
+        user_manager:   fos_user.user_manager.default
+
 #swiftmailer:
 #    delivery_address: me@example.com
+
+security:
+    encoders:
+        FOS\UserBundle\Model\UserInterface: bcrypt
+
+    role_hierarchy:
+        ROLE_ADMIN:       ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
+
+    providers:
+        fos_userbundle:
+            id: fos_user.user_provider.username
+
+    firewalls:
+        main:
+            pattern: ^/
+            form_login:
+                provider: fos_userbundle
+                # csrf_token_generator: security.csrf.token_manager
+                # if you are using Symfony < 2.8, use the following config instead:
+                csrf_provider: form.csrf_provider
+
+            logout:       true
+            anonymous:    true
