--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,16 +1,10 @@
-login:
-    path: /login
-    defaults: { _controller: AppBundle:Page:home }
-
-logout:
-    path: /logout
-    defaults: { _controller: AppBundle:Page:home }
-
-login_check:
-    path: /login_check
-
 default:
     path:  /
+    defaults: { _controller: AppBundle:Page:landing }
+    schemes:  [https]
+
+home:
+    path:  /home
     defaults: { _controller: AppBundle:Page:home }
     schemes:  [https]
 
@@ -29,24 +23,12 @@ sustain_user:
     type:     annotation
     prefix:   /
 
-fos_user_security:
-    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
-fos_user_profile:
-    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
-    prefix: /profile
-
-fos_user_register:
-    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
-    prefix: /register
-
-fos_user_resetting:
-    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
-    prefix: /resetting
-
-fos_user_change_password:
-    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
-    prefix: /profile
+logout:
+    path: /logout
+    defaults: { _controller: AppBundle:Page:home }
 
 
 
