--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -73,7 +73,7 @@ security:
                 providers: [fos_userbundle]
 
         fos_userbundle:
-            id: fos_user.user_provider.username
+            id: sso_user_provider
 
     encoders:
         FOS\UserBundle\Model\UserInterface: sha512
