--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,6 +1,6 @@
 services:
     sso_user_provider:
-        class: AppBundle\Security\SSOUserProvider
+        class: Sustain\AppBundle\Security\SSOUserProvider
         arguments:
             - '@fos_user.user_manager'
             - '@doctrine.orm.entity_manager'
