--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,5 +1,34 @@
 # app/config/security.yml
 security:
+    firewalls:
+        main:
+            pattern: ^/
+            trusted_sso:
+                manager: admin_sso
+                create_users: true
+                created_users_roles: [ 'ROLE_USER' ]
+                login_action: false
+                logout_action: false
+                login_path: /login
+                check_path: /login
+                failure_path: /register
+            provider: fos_userbundle
+            anonymous:    true
+            switch_user: true
+            logout:
+              path:   /logout
+              target: /home
+
+    providers:
+        chain_provider:
+            chain:
+                providers: [fos_userbundle]
+
+        fos_userbundle:
+            id: sso_user_provider
+
+    encoders:
+        FOS\UserBundle\Model\UserInterface: sha512
 
     access_control:
 
