--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,14 @@
+login:
+    path: /login
+    defaults: { _controller: AppBundle:Page:landing }
+
+logout:
+    path: /logout
+    defaults: { _controller: AppBundle:Page:landing }
+
+login_check:
+    path: /login_check
+
 default:
     path:  /
     defaults: { _controller: AppBundle:Page:landing }
@@ -21,9 +32,6 @@ sustain_user:
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
 
-logout:
-    path: /logout
-    defaults: { _controller: AppBundle:Page:landing }
 
 
 
