--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,6 +3,15 @@ imports:
     - { resource: security.yml }
     - { resource: services.yml }
 
+parameters:
+    locale: en
+    be_simple.sso_auth.client.option.curlopt_sslversion.value: 0
+
+
+services:
+    fos_user.doctrine_registry:
+        alias: doctrine
+
 framework:
     #esi:             ~
     translator:      { fallback: "%locale%" }
