--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,5 +1,30 @@
 # app/config/security.yml
 security:
+
+# dev security settings
+#    firewalls:
+#        main:
+#            pattern: ^/
+#            form_login:
+#                csrf_provider: security.csrf.token_manager
+#                default_target_path: /user/home
+#            logout:
+#                path:   /logout
+#                target: /home
+#            anonymous:    true
+#            switch_user: true
+#    providers:
+#        chain_provider:
+#            chain:
+#                providers: [fos_userbundle]
+#
+#        fos_userbundle:
+#            id: fos_user.user_provider.username
+#
+#    encoders:
+#        FOS\UserBundle\Model\UserInterface: bcrypt
+
+
     firewalls:
         main:
             pattern: ^/
