--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -181,7 +181,7 @@ ivory_ck_editor:
             startupFocus: true
             toolbar: "toolbar_page"
             removePlugins: "elementspath,contextmenu,liststyle,tabletools"
-            allowedContent: 'p h2 h3 h4 img{text-align,margin-left}(*); a[href,target,name]{*}(*); table th tr td strong em; ol ul li span(*){font-size,font-family,color,background-color}; img[*]{*}; div(*);iframe{*}[*];'
+            allowedContent: 'p h2 h3 h4 img{text-align,margin-left}(*); a[href,target,name]{*}(*); table{*}(*); th tr td strong em; ol ul li span(*){font-size,font-family,color,background-color}; img[*]{*}; div(*);iframe{*}[*];'
             disableNativeSpellChecker: false
             height: 500
             stylesSet: 'styles:../../bundles/app/js/ckeditor_styles.js'
