--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -40,42 +40,16 @@ twig:
 
 # Assetic Configuration
 assetic:
-  java: /usr/bin/java
-  filters:
-    yui_js:
-      jar: %kernel.root_dir%/../vendor/packagist/yuicompressor-bin/bin/yuicompressor.jar
-    lessphp:
-      apply_to: "\.less$"
-      #file:   %kernel.root_dir%/../vendor/leafo/lessphp/lessc.inc.php
-    cssrewrite: ~
-  assets:
-    jquery_js:
-        inputs:
-            - '%kernel.root_dir%/../vendor/components/jquery/jquery.js'
-        filters: [yui_js]
-    jqueryui_js:
-        inputs:
-            - '%kernel.root_dir%/../vendor/components/jqueryui/jquery-ui.js'
-        filters: [yui_js]
-    bootstrap_js:
-        inputs:
-            - '%kernel.root_dir%/../vendor/twbs/bootstrap/js/transition.js'
-            - '%kernel.root_dir%/../vendor/twbs/bootstrap/js/alert.js'
-            - '%kernel.root_dir%/../vendor/twbs/bootstrap/js/modal.js'
-            - '%kernel.root_dir%/../vendor/twbs/bootstrap/js/dropdown.js'
-            - '%kernel.root_dir%/../vendor/twbs/bootstrap/js/scrollspy.js'
-            - '%kernel.root_dir%/../vendor/twbs/bootstrap/js/tab.js'
-            - '%kernel.root_dir%/../vendor/twbs/bootstrap/js/tooltip.js'
-            - '%kernel.root_dir%/../vendor/twbs/bootstrap/js/popover.js'
-            - '%kernel.root_dir%/../vendor/twbs/bootstrap/js/button.js'
-            - '%kernel.root_dir%/../vendor/twbs/bootstrap/js/collapse.js'
-            - '%kernel.root_dir%/../vendor/twbs/bootstrap/js/carousel.js'
-            - '%kernel.root_dir%/../vendor/twbs/bootstrap/js/affix.js'
-        filters: [yui_js]
-    bootstrap_less:
-        inputs:
-            - '%kernel.root_dir%/../vendor/twbs/bootstrap/less/bootstrap.less'
-        filters: [lessphp]
+    debug:          "%kernel.debug%"
+    use_controller: false
+    bundles:        [ ]
+    #java: /usr/bin/java
+    filters:
+        cssrewrite: ~
+        #closure:
+        #    jar: "%kernel.root_dir%/Resources/java/compiler.jar"
+        #yui_css:
+        #    jar: "%kernel.root_dir%/Resources/java/yuicompressor-2.4.7.jar"
 
 # Doctrine Configuration
 doctrine:
@@ -102,17 +76,6 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
-
-be_simple_sso_auth:
-    admin_sso:
-        protocol:
-            id: cas
-            version: 2
-        server:
-            id: cas
-            login_url: https://cas.uga.edu/cas/login
-            logout_url: https://cas.uga.edu/cas/logout
-            validation_url: https://cas.uga.edu/cas/serviceValidate
 
 be_simple_sso_auth:
     admin_sso:
@@ -174,22 +137,32 @@ knp_snappy:
         binary:     %wkhtmltopdf_path%
         options:    []
 
+#google:
+#    analytics:
+#        enhanced_ecommerce: false
+#        session_auto_started: true
+#        trackers:
+#            default:
+#                name: WatershedUGAAnalytics
+#                accountId: UA-90853771-1
+#                domain: watershed.uga.edu
+#                setSiteSpeedSampleRate: 5
+#                allowAnchor: true
+#                allowHash: true
+#                includeNamePrefix: false
+#                plugins:
+#                    - 'linkid'
+#        whitelist: [ 'q', 'utm_source', 'utm_medium', 'utm_term', 'utm_content', 'utm_campaign' ]
+
 google:
     analytics:
-        enhanced_ecommerce: false
-        session_auto_started: true
         trackers:
             default:
-                name: WatershedUGAAnalytics
+                name:      WatershedUGAAnalytics
                 accountId: UA-90853771-1
-                domain: watershed.uga.edu
-                setSiteSpeedSampleRate: 5
-                allowAnchor: true
-                allowHash: true
-                includeNamePrefix: false
-                plugins:
-                    - 'linkid'
-        whitelist: [ 'q', 'utm_source', 'utm_medium', 'utm_term', 'utm_content', 'utm_campaign' ]
+                domain:    watershed.uga.edu
+                trackPageLoadTime: true
+                anonymizeIp: false
 
 ivory_ck_editor:
     configs:
