--- a/composer.json
+++ b/composer.json
@@ -1,39 +1,43 @@
 {
-    "name": "symfony/framework-standard-edition",
-    "license": "MIT",
+    "name": "rlbaltha/cert",
+    "license": "proprietary",
     "type": "project",
-    "description": "The \"Symfony Standard Edition\" distribution",
     "autoload": {
-        "psr-0": { "": "src/" }
+        "psr-4": {
+            "": "src/"
+        }
     },
     "require": {
         "php": ">=5.3.9",
-        "symfony/symfony": "2.7.*",
-        "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
-        "symfony/assetic-bundle": "~2.3",
-        "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/monolog-bundle": "~2.4",
+        "doctrine/orm": "^2.4.8",
+        "incenteev/composer-parameter-handler": "~2.0",
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0",
+        "symfony/monolog-bundle": "^3.0.2",
+        "symfony/swiftmailer-bundle": "~2.3,>=2.3.10",
+        "symfony/symfony": "2.8.*",
+        "twig/twig": "^1.0||^2.0",
+        "symfony/assetic-bundle": "~2.3",
+        "symfony/polyfill-iconv": "~1.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "stof/doctrine-extensions-bundle": "dev-master",
-        "vich/uploader-bundle": "0.9.0",
-        "knplabs/knp-gaufrette-bundle": "0.2.*@dev",
-        "knplabs/gaufrette": "0.2.*@dev",
-        "knplabs/knp-paginator-bundle": "dev-master",
+        "ircmaxell/password-compat": "~1.0.4",
+        "ddeboer/data-import-bundle": "^0.1.0",
+        "egeloen/ckeditor-bundle": "^3.0",
         "knplabs/knp-snappy-bundle": "dev-master",
-        "egeloen/ckeditor-bundle": "2.*",
-        "components/jquery": "2.1.*",
-        "components/jqueryui": "1.11.*",
-        "twbs/bootstrap" : "*",
-        "oyejorge/less.php": "~1.5",
-        "packagist/yuicompressor-bin": "dev-master",
+        "besimple/sso-auth-bundle": "@dev",
+        "adesigns/calendar-bundle": "^1.1",
+        "friendsofsymfony/jsrouting-bundle": "^1.6",
+        "stephanecollot/datetimepicker-bundle": "dev-master",
+        "jmikola/auto-login-bundle": "~1.0",
+        "vich/uploader-bundle": "^1.6",
+        "knplabs/knp-paginator-bundle": "dev-master",
         "h4cc/wkhtmltopdf-amd64" : "0.12.1",
-        "besimple/sso-auth-bundle": "*@dev",
-        "jms/serializer-bundle": "^1.1",
-        "antimattr/google-bundle": "~2.0@stable"
+        "jms/serializer-bundle": "^1.1"
+
+
+
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
@@ -44,14 +48,16 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ],
         "post-update-cmd": [
             "Incenteev\\ParameterHandler\\ScriptHandler::buildParameters",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::buildBootstrap",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::clearCache",
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installAssets",
-            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile"
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::installRequirementsFile",
+            "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ]
     },
     "config": {
@@ -63,9 +69,6 @@
         "symfony-assets-install": "symlink",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
-        },
-        "branch-alias": {
-            "dev-master": "2.3-dev"
         }
     }
 }
