--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     },
     "require": {
         "php": ">=5.3.9",
-        "symfony/symfony": "2.7.*",
+        "symfony/symfony": "2.8.*",
         "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
         "symfony/assetic-bundle": "~2.3",
@@ -19,11 +19,9 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "stof/doctrine-extensions-bundle": "dev-master",
-        "vich/uploader-bundle": "1.4.2",
-        "knplabs/gaufrette": "0.2.*@dev",
+        "vich/uploader-bundle": "~1.4",
         "knplabs/knp-paginator-bundle": "dev-master",
-        "knplabs/knp-snappy-bundle": "dev-master",
-        "egeloen/ckeditor-bundle": "2.*",
+        "egeloen/ckeditor-bundle": "^3.0",
         "h4cc/wkhtmltopdf-amd64" : "0.12.1",
         "besimple/sso-auth-bundle": "*@dev",
         "jms/serializer-bundle": "^1.1",
