maintenance only mode

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -110,16 +110,16 @@ stof_doctrine_extensions:
             timestampable: true
             sluggable: true
 
-knp_paginator:
-    page_range: 5                      # default page range used in pagination control
-    default_options:
-        page_name: page                # page query parameter name
-        sort_field_name: sort          # sort field query parameter name
-        sort_direction_name: direction # sort direction query parameter name
-        distinct: true                 # ensure distinct results, useful when ORM queries are using GROUP BY statements
-    template:
-        pagination: KnpPaginatorBundle:Pagination:sliding.html.twig     # sliding pagination controls template
-        sortable: KnpPaginatorBundle:Pagination:sortable_link.html.twig # sort link template
+#knp_paginator:
+#    page_range: 5                      # default page range used in pagination control
+#    default_options:
+#        page_name: page                # page query parameter name
+#        sort_field_name: sort          # sort field query parameter name
+#        sort_direction_name: direction # sort direction query parameter name
+#        distinct: true                 # ensure distinct results, useful when ORM queries are using GROUP BY statements
+#    template:
+#        pagination: KnpPaginatorBundle:Pagination:sliding.html.twig     # sliding pagination controls template
+#        sortable: KnpPaginatorBundle:Pagination:sortable_link.html.twig # sort link template
 
 vich_uploader:
     db_driver: orm
@@ -132,22 +132,22 @@ vich_uploader:
             inject_on_load: true # determines whether to inject a File instance upon load
 
 
-google:
-    analytics:
-        enhanced_ecommerce: false
-        session_auto_started: true
-        trackers:
-            default:
-                name: WatershedUGAAnalytics
-                accountId: UA-90853771-1
-                domain: watershed.uga.edu
-                setSiteSpeedSampleRate: 5
-                allowAnchor: true
-                allowHash: true
-                includeNamePrefix: false
-                plugins:
-                    - 'linkid'
-        whitelist: [ 'q', 'utm_source', 'utm_medium', 'utm_term', 'utm_content', 'utm_campaign' ]
+#google:
+#    analytics:
+#        enhanced_ecommerce: false
+#        session_auto_started: true
+#        trackers:
+#            default:
+#                name: WatershedUGAAnalytics
+#                accountId: UA-90853771-1
+#                domain: watershed.uga.edu
+#                setSiteSpeedSampleRate: 5
+#                allowAnchor: true
+#                allowHash: true
+#                includeNamePrefix: false
+#                plugins:
+#                    - 'linkid'
+#        whitelist: [ 'q', 'utm_source', 'utm_medium', 'utm_term', 'utm_content', 'utm_campaign' ]
 
 ivory_ck_editor:
     configs:
